Fix the size issue for the img cropper

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -219,6 +219,10 @@ div.dashboard {
   padding: 10px;
 }
 
+.profile-modal {
+  background-color: black;
+}
+
 div.card.social-links div.card-content {
   font-size: 1.1em;
   padding: 10px;
